# bevy-cljrs

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: console.rs  lib.rs  main.rs  scripting.rs  unit_manager.rs  units.rs
src/scripts/: some-user-script.clj
