[package]
name = "bevy_cljrs"
version = "0.0.0"
edition = "2018"

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_prototype_lyon = "0.3"
rand = "0.8"
[dependencies.cljrs]
# path = "../cljrs"
git = "https://github.com/phrohdoh/cljrs"
branch = "wip/send-env-arc"
package = "rust_clojure"
